[package]
name = "rust-newsletter-backend"
version = "0.1.0"
authors = ["Henrique Azank <henriqueazank@gmail.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust-newsletter-backend"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.12.20"
